fonts fix, colors fix, scrollbar styled, game round info re-styled, other fixes

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,3 +1,10 @@
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    margin-bottom: 24px;
+    line-height: initial;
+    font-weight: 400;
+}
+
 h1 {
     font-weight: 300;
     font-size: 95px;
