--- a/src/views/Board/styles.scss
+++ b/src/views/Board/styles.scss
@@ -1,3 +1,8 @@
+.Board__RoundInfo {
+    padding: 16px 0;
+    margin: 0 auto;
+}
+
 .Board__Container {
     .Board__BetSignContainer {
         display: flex;
@@ -143,7 +148,7 @@
         margin: 0 8px 0 0;
         width: 20px;
         height: 20px;
-        border: 1px $colorGrey solid;
+        border: 1px $colorDark solid;
     }
 
     > p {
