--- a/src/views/Game/End/styles.scss
+++ b/src/views/Game/End/styles.scss
@@ -10,6 +10,7 @@
         .GameEnd__PlayerItem {
             display: flex;
             padding: 8px 0;
+            justify-content: center;
 
             .GameEnd__PlayerColor {
                 height: 20px;
